# sdaa_ctrl

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  flake.nix
cmd/: I2CRead.yaml  I2CReadReg.yaml  I2CWrite.yaml  I2CWriteReg.yaml  Suspend.yaml  XGbeCfgSingle.yaml
doc/: general_def.typ  i2c.typ  init.typ  ms.typ  protocol.typ  protocol_38.typ  protocol_cr.typ  protocol_hl.typ  protocol_ia.typ  query.typ  simplepaper.typ  stream_ctrl.typ  suspend.typ  sync.typ  utils.typ  vga.typ  xgbe.typ  xgbe_query.typ  xgbe_var.typ
src/: c_interface.rs  ctrl_msg.rs  lib.rs  main.rs  utils.rs
