[package]
name = "sdaa_ctrl"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.15.0"
clap = { version = '4.5.40', features = ['derive'] }
serde = { version = '1.0.144', features = ['derive'] }
serde_yaml = '0.9.34-deprecated'
hex-buffer-serde='0.4.0'
chrono = '0.4.41'
rand = '0.9.1'
pnet = "0.35.0"

[build-dependencies]
bindgen = "0.72.0"
cbindgen = "0.29.0"

[lib]
name = "sdaa_ctrl"
crate-type = ["staticlib", "cdylib", "rlib"]
