[build-dependencies]
bindgen = "0.72.0"
cbindgen = "0.29.0"

[dependencies]
binrw = "0.15.0"
chrono = "0.4.41"
hex-buffer-serde = "0.4.0"
pnet = "0.35.0"
rand = "0.9.2"
serde_yaml = "0.9.34+deprecated"

[dependencies.clap]
features = ["derive"]
version = "4.5.45"

[dependencies.serde]
features = ["derive"]
version = "1.0.219"

[lib]
crate-type = [
    "staticlib",
    "cdylib",
    "rlib",
]
name = "sdaa_ctrl"

[package]
edition = "2024"
name = "sdaa_ctrl"
version = "0.1.0"
